# dbt_snowflake

./: .dockerignore  .gitignore  Dockerfile  README.md  airflow.db  airflow_settings.yaml  dbt_project.yml  docker-compose.yml  profiles.yml  pyproject.toml  requirements.txt
dags/: dbt_snowflake_dag.py
include/: init-postgres.sql
models/marts/: fct_payments.sql  int_orders_items.sql
models/raw/: raw_sources.yaml
models/staging/: stg_payment_events.sql  stg_tpch_line_items.sql  stg_tpch_orders.sql  tpch_sources.yaml
