[project]
name = "dbt-snowflake-peach"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-core>=1.11.11",
    "dbt-snowflake>=1.11.5",
    "pandas>=3.0.3",
    "snowflake-snowpark-python>=1.51.0",
    "astronomer-cosmos>=1.8.0",
    "apache-airflow>=2.10.0",
    "apache-airflow-providers-snowflake>=5.7.0",
]

[dependency-groups]
dev = [
    "astronomer-cosmos>=1.14.2",
    "pylint>=4.0.5",
    "pytest>=9.0.3",
]
